--- a/web/index.html
+++ b/web/index.html
@@ -42,16 +42,36 @@
       .ping { color: green; font-weight: bold; }
       @keyframes slideDown { from { transform: translateY(-50px); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
 
-      /* Pagination */
-      .pagination { margin-top: 15px; text-align: center; }
-      .pagination button {
-        margin: 0 3px; padding: 6px 10px;
-        border: 1px solid #ccc; background: #fff;
-        cursor: pointer; border-radius: 4px;
-      }
-      .pagination button.active { background: #333; color: #fff; font-weight: bold; }
-      .pagination span { margin: 0 5px; color: #666; font-size: 14px; }
-    </style>
+
+  /* Pagination */
+  .pagination { margin-top: 15px; text-align: center; }
+  .pagination button {
+    margin: 0 3px;
+    padding: 6px 10px;
+    border: 1px solid #ccc;
+    background: #fff;
+    color: #555;              /* warna default nomor halaman */
+    cursor: pointer;
+    border-radius: 4px;
+    font-weight: 500;
+    transition: all 0.2s ease;
+  }
+  .pagination button:hover {
+    color: #007bff;           /* warna saat hover */
+    border-color: #007bff;
+  }
+  .pagination button.active {
+    background: #007bff;      /* background biru untuk halaman aktif */
+    color: #fff;              /* teks putih */
+    font-weight: bold;
+  }
+  .pagination span {
+    margin: 0 5px;
+    color: #999;
+    font-size: 14px;
+  }
+</style>
+
   </head>
   <body>
     <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
